# ZH-Punctuation-Restore

./: .gitignore  README.md  core.py  eval.py  example.py  example_ckpt.py  example_hf.py  export_ckpt_to_hf.py  main.py  predict.py  pyproject.toml  setup-lightning.sh  train.sh
data/: STC2_Train_V1.0.csv  STC2_Train_V1.0.xlsx
zhpr/: core.py  predict.py
